--- a/files/nginx.conf
+++ b/files/nginx.conf
@@ -3,6 +3,7 @@
 worker_processes  1;
 
 error_log  stderr;
+daemon off;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
 
@@ -36,23 +37,16 @@ http {
         listen       80;
         server_name  localhost;
 
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
+	root html;
+	try_files $uri $uri/ =404;
+	index index.php index.html index.htm;
 
         # redirect server error pages to the static page /50x.html
         #
         error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
+	location = /50x.html {
+		root html;
+	}
 
         # proxy the PHP scripts to Apache listening on 127.0.0.1:80
         #
@@ -62,13 +56,13 @@ http {
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
+        location ~ \.php$ {
+	    try_files $uri =404;
+            fastcgi_pass   127.0.0.1:9000;
+            fastcgi_index  index.php;
+            fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+            include        fastcgi_params;
+        }
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
