--- a/files/php-fpm.conf
+++ b/files/php-fpm.conf
@@ -146,8 +146,8 @@ error_log = /dev/stderr
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = nobody
-group = nobody
+user = nginx
+group = www-data
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
